Added adsense verification

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="branding">
         <!--<p class="eyebrow"></p>-->
         <h1 class="hero-title">Nimi vauvalle</h1>
-        <p class="hero-subtitle">Sivu auttaa sinua löytämään kaikista sopivimman nimen uudelle perheenjäsenellesi.</p>
+        <p class="hero-subtitle">Sivu auttaa sinua löytämään kaikista sopivimman nimen uudelle perheenjäsenellesi. Sivu näyttää palvelinkulujen kattamiseksi mainoksia. Jos haluat tukea sivuston kehitystyötä, voit harkita ostavasti jotain sivuston affiliate-linkkien kautta.</p>
       </div>
       <div class="ad-slot ad-top" aria-label="Main ad placeholder">Mainospaikka</div>
     </header>
@@ -34,10 +34,10 @@
                 <label><input type="checkbox" name="gender" value="unisex" checked /> Sukupuolineutraalit nimet</label>
               </fieldset>
               <label class="surname-field">
-                Anna sukunimi sopivan etunimen suosittelua varten
+                Kirjoita vauvan sukunimi
                 <input type="text" id="surname-input" name="surname" placeholder="Esim. Korhonen" autocomplete="off" />
                 <span class="hint">
-                  Sukunimeä ei tallenneta mihinkään. Sivusto osaa suositella etunimiä ainoastaan sukunimille, joilla on vähintään 20 nimenhaltijaa.  
+                  Sukunimeä ei tallenneta mihinkään. Sivusto suosittelee etunimiä sukunimien perusteella. Sivusto osaa suositella etunimiä ainoastaan sukunimille, joilla on vähintään 20 nimenhaltijaa.  
                   <button type="button" class="link-button" id="edit-weight-button">Säädä suosittelualgoritmia</button>
                 </span>
                 <div id="surname-analysis" class="hint surname-analysis"></div>
