--- a/index.html
+++ b/index.html
@@ -219,5 +219,7 @@
         </p>
       </div>
     </div>
+  <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
+<script>eruda.init();</script>
   </body>
 </html>
