--- a/content/articles-strip.html
+++ b/content/articles-strip.html
@@ -9,12 +9,6 @@
   <div class="strip-body">
     <div class="article-strip" role="list">
       <article class="article-card" role="listitem">
-        <h3>Varma valinta</h3>
-        <p>Pehmeän kuuloiset suomalaiset nimet, joissa ei ole vaikeasti lausuttavia äänteitä, kuten r, s, ä, ö. Sopivat ulkomaalaisenkin suuhun ja toimivat useimpien sukunimien kanssa.</p>
-        <p class="hint">Esimerkit: Jouni · Elvi · Vieno · Milo · Eliel</p>
-        <button class="article-cta small" type="button" data-filter-href="index.html?exclude=r,s,ä,ö,^*nn,^*kk,^*pp,^*tt,^*ee,^*aa,^*ii,^*oo,^*uu,^*yy&len=3-7&pf=soft_word.include.1&gf=all_finnish_names.txt.include&sort=match&dir=desc">Testaa hakuasetuksia</button>
-      </article>
-      <article class="article-card" role="listitem">
         <h3>Ikivihreät</h3>
         <p>Suomalaiset nimet, jotka vain tuntuvat pysyvän jatkuvasti suosittuina.</p>
         <p class="hint">Esimerkit: Anna · Lauri · Maria · Eeva · Maija · Veikko</p>
@@ -25,6 +19,12 @@
         <p>Suomalaiset keskipitkät ja pehmeän kuuloiset nimet, joilla on alle 500 nimenkantajaa. Näillä nimillä vältät kaimat hiekkalaatikolla! </p>
         <p class="hint">Esimerkit: Elmer · Meiju · Ilmi · Nino · Vivi · Evelin</p>
         <button class="article-cta small" type="button" data-filter-href="index.html?pop=0-500&len=4-6&gf=all_finnish_names.txt.include&pf=soft_word.include.1&sort=match&dir=desc">Testaa hakuasetuksia</button>
+      </article>
+      <article class="article-card" role="listitem">
+        <h3>Varmat valinnat</h3>
+        <p>Pehmeän kuuloiset suomalaiset nimet, joissa ei ole vaikeasti lausuttavia äänteitä, kuten r, s, ä, ö. Sopivat ulkomaalaisenkin suuhun ja toimivat useimpien sukunimien kanssa.</p>
+        <p class="hint">Esimerkit: Jouni · Elvi · Vieno · Milo · Eliel</p>
+        <button class="article-cta small" type="button" data-filter-href="index.html?exclude=r,s,ä,ö,^*nn,^*kk,^*pp,^*tt,^*ee,^*aa,^*ii,^*oo,^*uu,^*yy&len=3-7&pf=soft_word.include.1&gf=all_finnish_names.txt.include&sort=match&dir=desc">Testaa hakuasetuksia</button>
       </article>
       <article class="article-card" role="listitem">
         <h3>2020-luvun nousijat</h3>
